--- a/C#/APP/Find Project/MainWindow.xaml
+++ b/C#/APP/Find Project/MainWindow.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="Find_Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Your App" Height="450" Width="800" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen">
+        Title="Seeker" Height="450" Width="800" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen"
+        Icon="Resources/seeker.ico"
+>
+    <!--Add Icon-->
+
     <Grid>
         <TabControl>
             <!-- Search Tab -->
@@ -25,16 +29,24 @@
             <TabItem Header="Settings">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto" MinWidth="115"/>
+                        <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Default Path:" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Right"/>
-                    <TextBox x:Name="defaultPathTextBox" Margin="10" VerticalAlignment="Top" Grid.Column="1"/>
-                    <!--                   
-                    <Label Content="Theme:" Margin="0,39,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="0"/>
-                    <ComboBox x:Name="themeComboBox" Margin="10,39,10,0" VerticalAlignment="Top" Grid.Column="1"/>
+                    <!--Alight the content right-->
+                    <Label Content="Default Path:" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
+                    <TextBox x:Name="defaultPathTextBox" Tag="Enter default path..." Margin="10,10,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
+                    <Label Content="CTRL+Enter Path:" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
+                    <TextBox x:Name="ctrlPathTextBox" Tag="Enter CTRL+Enter path..." Margin="10,40,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
+                    <!--
+                    <Label Content="Theme:" Margin="0,69,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
+                    <ComboBox x:Name="themeComboBox" Margin="9,69,10,0" VerticalAlignment="Top" SelectedIndex="0" SelectionChanged="ThemeComboBox_SelectionChanged" Grid.Column="1">
+                        <ComboBoxItem Content="Light"/>
+                        <ComboBoxItem Content="Dark"/>
+                        <ComboBoxItem Content="Blue"/>
+                    </ComboBox>
                     -->
-                    <Button Content="Save" Click="SaveButton_Click" Margin="10,344,10,0" VerticalAlignment="Top" Grid.Column="1"/>
+                    <Button Content="Save" Click="SaveButton_Click" Margin="10,319,10,0" VerticalAlignment="Top" Grid.Column="1" Height="32"/>
+
                 </Grid>
             </TabItem>
         </TabControl>
