Add Shift+Enter as an additional keybind

--- a/C#/APP/Find Project/MainWindow.xaml
+++ b/C#/APP/Find Project/MainWindow.xaml
@@ -37,6 +37,9 @@
                     <TextBox x:Name="defaultPathTextBox" Tag="Enter default path..." Margin="10,10,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
                     <Label Content="CTRL+Enter Path:" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
                     <TextBox x:Name="ctrlPathTextBox" Tag="Enter CTRL+Enter path..." Margin="10,40,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
+                    <Label Content="Shift+Enter Path:" Margin="0,70,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
+                    <TextBox x:Name="shiftPathTextBox" Tag="Enter Shit+Enter path..." Margin="10,70,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
+                    
                     <!--
                     <Label Content="Theme:" Margin="0,69,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
                     <ComboBox x:Name="themeComboBox" Margin="9,69,10,0" VerticalAlignment="Top" SelectedIndex="0" SelectionChanged="ThemeComboBox_SelectionChanged" Grid.Column="1">
