--- a/C#/APP/Find Project/MainWindow.xaml
+++ b/C#/APP/Find Project/MainWindow.xaml
@@ -32,22 +32,53 @@
                         <ColumnDefinition Width="Auto" MinWidth="115"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <!--Alight the content right-->
+
+                    <!-- Setting Content -->
                     <Label Content="Default Path:" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <TextBox x:Name="defaultPathTextBox" Tag="Enter default path..." Margin="10,10,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
+                    <Grid Grid.Column="1" Margin="10,10,10,0" VerticalAlignment="Top">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="defaultPathTextBox" Tag="Enter default path..." Grid.Column="0" Margin="0,0,60,0"/>
+                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="DefaultPathButton_Click" Margin="605,0,0,0"/>
+                    </Grid>
                     <Label Content="CTRL+Enter Path:" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <TextBox x:Name="ctrlPathTextBox" Tag="Enter CTRL+Enter path..." Margin="10,40,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
+                    <Grid Grid.Column="1" Margin="10,40,10,0" VerticalAlignment="Top">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="ctrlPathTextBox" Tag="Enter CTRL+Enter path..." Grid.Column="0" Margin="0,0,60,0"/>
+                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="CtrlPathButton_Click" Grid.ColumnSpan="2" Margin="605,0,0,0">
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                    </Grid>
                     <Label Content="Shift+Enter Path:" Margin="0,70,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <TextBox x:Name="shiftPathTextBox" Tag="Enter Shit+Enter path..." Margin="10,70,10,0" VerticalAlignment="Top" Grid.Column="1" Height="25" />
-                    
-                    <!--
-                    <Label Content="Theme:" Margin="0,69,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <ComboBox x:Name="themeComboBox" Margin="9,69,10,0" VerticalAlignment="Top" SelectedIndex="0" SelectionChanged="ThemeComboBox_SelectionChanged" Grid.Column="1">
-                        <ComboBoxItem Content="Light"/>
-                        <ComboBoxItem Content="Dark"/>
-                        <ComboBoxItem Content="Blue"/>
-                    </ComboBox>
-                    -->
+                    <Grid Grid.Column="1" Margin="10,70,10,0" VerticalAlignment="Top">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="shiftPathTextBox" Tag="Enter Shift+Enter path..." Grid.Column="0" Margin="0,0,60,0"/>
+                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="ShiftPathButton_Click" Grid.ColumnSpan="2" Margin="605,0,0,0">
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                    </Grid>
+
+                    <!-- Save Button -->
                     <Button Content="Save" Click="SaveButton_Click" Margin="10,319,10,0" VerticalAlignment="Top" Grid.Column="1" Height="32"/>
 
                 </Grid>
