--- a/C#/APP/Find Project/MainWindow.xaml
+++ b/C#/APP/Find Project/MainWindow.xaml
@@ -1,28 +1,36 @@
-﻿<Window x:Class="Find_Project.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:av="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="Find_Project.MainWindow"
         Title="Seeker" Height="450" Width="800" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen"
         Icon="/Seeker.ico"
 >
     <!--Add Icon-->
 
     <Grid>
-        <TabControl>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="0*"/>
+        </Grid.RowDefinitions>
+        <TabControl Margin="0,0,0,45">
             <!-- Search Tab -->
             <TabItem Header="Search">
                 <Grid>
-                    <TextBox x:Name="searchBox" Margin="10" VerticalAlignment="Top" KeyDown="SearchBox_KeyDown"/>
-                    <Button Content="Search" Click="SearchButton_Click" Margin="10,40,10,10" VerticalAlignment="Top" />
-                    <ListBox x:Name="listBox" Margin="10,106,10,10" MouseDoubleClick="ListBox_MouseDoubleClick">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="45*"/>
+                        <RowDefinition Height="301*"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBox x:Name="searchBox" Margin="10,0,10,0" VerticalAlignment="Center" KeyDown="SearchBox_KeyDown" Height="25"/>
+                    <Button Content="Search" Click="SearchButton_Click" Margin="10,40,10,0" VerticalAlignment="Top" Grid.RowSpan="2" />
+                    <ListBox x:Name="listBox" Margin="10,60,10,10" MouseDoubleClick="ListBox_MouseDoubleClick" Grid.Row="1" av:ItemsSource="{av:SampleData ItemCount=5}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding}">
-
-                                </TextBlock>
+                                <TextBlock Text="{Binding}"/>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                    <Label x:Name="warningLabel" Content="" Foreground="Red" Margin="10,77,10,0" VerticalAlignment="Top"/>
+                    <Label x:Name="warningLabel" Content="" Foreground="Red" Margin="10,31,10,0" VerticalAlignment="Top" Grid.Row="1"/>
                 </Grid>
             </TabItem>
             <!-- Settings Tab -->
@@ -34,56 +42,50 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- Setting Content -->
+                    <!-- Default Path -->
                     <Label Content="Default Path:" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <Grid Grid.Column="1" Margin="10,10,10,0" VerticalAlignment="Top">
+                    <Grid Grid.Column="1" Margin="10,10,10,0" VerticalAlignment="Top" Height="30">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <TextBox x:Name="defaultPathTextBox" Tag="Enter default path..." Grid.Column="0" Margin="0,0,60,0"/>
-                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="DefaultPathButton_Click" Margin="605,0,0,0"/>
+                        <TextBox x:Name="defaultPathTextBox" Tag="Enter default path..." Grid.Column="0" Margin="0,0,0,0" Height="30"/>
+                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="DefaultPathButton_Click" Grid.Column="1"/>
                     </Grid>
-                    <Label Content="CTRL+Enter Path:" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <Grid Grid.Column="1" Margin="10,40,10,0" VerticalAlignment="Top">
+
+                    <!-- CTRL+Enter Path -->
+                    <Label Content="CTRL+Enter Path:" Margin="0,50,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
+                    <Grid Grid.Column="1" Margin="10,50,10,0" VerticalAlignment="Top" Height="30">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <TextBox x:Name="ctrlPathTextBox" Tag="Enter CTRL+Enter path..." Grid.Column="0" Margin="0,0,60,0"/>
-                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="CtrlPathButton_Click" Grid.ColumnSpan="2" Margin="605,0,0,0">
-                            <Button.Template>
-                                <ControlTemplate TargetType="Button">
-                                    <Border Background="{TemplateBinding Background}">
-                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    </Border>
-                                </ControlTemplate>
-                            </Button.Template>
-                        </Button>
+                        <TextBox x:Name="ctrlPathTextBox" Tag="Enter CTRL+Enter path..." Grid.Column="0" Margin="0,0,0,0" Height="30"/>
+                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="CtrlPathButton_Click" Grid.Column="1"/>
                     </Grid>
-                    <Label Content="Shift+Enter Path:" Margin="0,70,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
-                    <Grid Grid.Column="1" Margin="10,70,10,0" VerticalAlignment="Top">
+
+                    <!-- Shift+Enter Path -->
+                    <Label Content="Shift+Enter Path:" Margin="0,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="24" Width="114" HorizontalContentAlignment="Right" />
+                    <Grid Grid.Column="1" Margin="10,90,10,0" VerticalAlignment="Top" Height="30">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <TextBox x:Name="shiftPathTextBox" Tag="Enter Shift+Enter path..." Grid.Column="0" Margin="0,0,60,0"/>
-                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="ShiftPathButton_Click" Grid.ColumnSpan="2" Margin="605,0,0,0">
-                            <Button.Template>
-                                <ControlTemplate TargetType="Button">
-                                    <Border Background="{TemplateBinding Background}">
-                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    </Border>
-                                </ControlTemplate>
-                            </Button.Template>
-                        </Button>
+                        <TextBox x:Name="shiftPathTextBox" Tag="Enter Shift+Enter path..." Grid.Column="0" Margin="0,0,0,0" Height="30"/>
+                        <Button Content="..." Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Foreground="Black" FontSize="16" Click="ShiftPathButton_Click" Grid.Column="1"/>
                     </Grid>
 
                     <!-- Save Button -->
-                    <Button Content="Save" Click="SaveButton_Click" Margin="10,319,10,0" VerticalAlignment="Top" Grid.Column="1" Height="32"/>
+                    <Button Content="Save" Click="SaveButton_Click" Margin="10,284,10,0" Grid.Column="1" Height="32" VerticalAlignment="Top"/>
 
                 </Grid>
             </TabItem>
         </TabControl>
+        <StatusBar VerticalAlignment="Bottom">
+            <StatusBarItem Height="25" VerticalAlignment="Top">
+                <TextBlock x:Name="statusMessage" Text="{Binding StatusMessage}" />
+            </StatusBarItem>
+        </StatusBar>
     </Grid>
 
 </Window>
